--- a/Index.html
+++ b/Index.html
@@ -14,12 +14,14 @@
 </head>
 
 <body>
-   
+
     <div class="container">
 
         <div class="jumbotron"> PAID IN FULL TRIVIA GAME!</div>
 
-        
+<div class="instructions">  Here's a quick little trivia game about one of my favorite movies Paid In Full!
+            You have 99 seconds to answer all the questions below hit the submit button when your finished to view
+            your results!</div>
 
         <h1 id="timer"> </h1>
 
